--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "serve": "python -m http.server 8080",
+    "ai-server": "node src/server/ai-server.js",
+    "dev:full": "concurrently \"npm run dev\" \"npm run ai-server\"",
     "lint": "eslint library/**/*.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -36,11 +38,19 @@
   },
   "homepage": "https://github.com/Nhatlinh9898/automatic-succotash#readme",
   "dependencies": {
+    "concurrently": "^9.2.1",
+    "express": "^5.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "three": "^0.158.0"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
-    "eslint": "^8.55.0"
+    "@vitejs/plugin-react": "^4.2.0",
+    "concurrently": "^8.2.2",
+    "cors": "^2.8.6",
+    "eslint": "^8.55.0",
+    "express": "^4.18.2",
+    "vite": "^5.0.0"
   },
   "engines": {
     "node": ">=16.0.0"
