feat: Add complete 3D MC Presenter system with React integration
 Features Added:
- 6 female characters with unique personalities
- Complete wardrobe system (8 outfits, 6 hair styles, 8 accessories, 8 colors)
- React-based UI with routing
- Three.js integration with React hooks
- AI integration (Gemini/OpenAI/Claude) with personality-based responses
- TTS lip-sync system with voice mapping
- Multi-camera system with smooth transitions
- OBS Browser Source compatibility

 Files Added:
- React components: CharacterSystem, MCPresenter, ThreeJSScene
- Configuration: character-config.json, environment files
- Documentation: Complete README, setup guides
- Build tools: Vite config, package scripts
- Server: Enhanced backend with character support

 Environment:
- Interactive setup script (setup-env.js)
- Multiple environment templates (.env.setup, .env.full)
- Comprehensive configuration options
- Feature flags and debug modes

 Documentation:
- Complete README with 12 sections
- API documentation with examples
- Troubleshooting guide
- Development and deployment guides

 Ready for production streaming with OBS

--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "build": "vite build",
     "preview": "vite preview",
     "serve": "python -m http.server 8080",
-    "ai-server": "node src/server/ai-server.js",
+    "ai-server": "node server.js",
+    "mc-presenter": "concurrently \"npm run ai-server\" \"python -m http.server 8080\"",
     "dev:full": "concurrently \"npm run dev\" \"npm run ai-server\"",
+    "dev:mc3d": "vite --config vite.mc3d.config.js",
+    "setup-env": "node setup-env.js",
+    "copy-env": "cp .env.setup .env",
     "lint": "eslint library/**/*.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -42,6 +46,7 @@
     "express": "^5.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.0",
     "three": "^0.158.0"
   },
   "devDependencies": {
