--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,21 @@
-# AI API Configuration
-REACT_APP_AI_API_ENDPOINT=http://localhost:8080/api/ai
-REACT_APP_AI_API_KEY=your_api_key_here
+# AI Provider Configuration
+# Choose: gemini or openai
+AI_PROVIDER=gemini
+
+# Gemini API Key
+# Get from: https://aistudio.google.com/
+GEMINI_API_KEY=your_gemini_api_key_here
+
+# OpenAI API Key (alternative to Gemini)
+# Get from: https://platform.openai.com/
+OPENAI_API_KEY=your_openai_api_key_here
+
+# Google Text-to-Speech API Key
+# Get from: https://console.cloud.google.com/
+TTS_API_KEY=your_tts_api_key_here
 
 # Server Configuration
-PORT=8080
+PORT=3001
+
+# Development
+NODE_ENV=development
