feat: Add comprehensive AI workflow and setup documentation
 Documentation System Added:
- QUICK-START.md - 5-minute setup guide for beginners
- SETUP-GUIDE.md - Complete 12-phase setup process
- AI-WORKFLOW.md - Detailed AI processing workflow with code examples
- PROCESS-CHART.md - Complete flowcharts and decision trees
- WORKFLOW-SUMMARY.md - System overview and quick reference

 AI Workflow Features:
- 5-phase processing pipeline (Input  Analysis  Context  Generation  Output)
- Intent classification with priority system
- Personality-based response generation
- Multi-modal output (text + TTS + animation)
- Error handling with fallback systems
- Performance monitoring and optimization

 Process Standards:
- Response time targets (< 5 seconds total)
- Quality checkpoints (accuracy > 95%)
- Decision trees for all scenarios
- Continuous improvement loop
- Performance metrics tracking

 User Benefits:
- Consistent experience across all interactions
- Clear documentation for all skill levels
- Troubleshooting guides for common issues
- Quick setup options (5 minutes to production)
- Comprehensive API integration examples

 Ready for:
- Professional streaming with OBS
- AI-powered character interactions
- Multi-language support (Vietnamese/English)
- Production deployment with monitoring

--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "dev:mc3d": "vite --config vite.mc3d.config.js",
     "setup-env": "node setup-env.js",
     "copy-env": "cp .env.setup .env",
+    "process-guide": "echo '📋 See SETUP-GUIDE.md for complete setup process'",
+    "ai-workflow": "echo '🤖 See AI-WORKFLOW.md for AI processing details'",
+    "process-chart": "echo '📊 See PROCESS-CHART.md for complete flowchart'",
+    "quick-start": "echo '⚡ See QUICK-START.md for 5-minute setup'",
     "lint": "eslint library/**/*.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
