feat: Add comprehensive integration files and documentation
- Add FRAMEWORK-INTEGRATION-README.md with setup guide
- Add INTEGRATION-SUMMARY.md with complete feature overview
- Add QUICK-START-INTEGRATION.md for rapid deployment
- Add demo-framework.html for testing framework features
- Add FrameworkIntegration.css for styling
- Add start-integration scripts for Windows and PowerShell
- Update package.json with new dependencies
- Update App.jsx and Header.jsx with integration features
- Add EnhancedAICharacterGenerator with library integration
- Add CharacterPrompts.js for AI character generation
- Add AIPromptAssistant.js for enhanced prompt management

This commit completes the AI framework integration with all necessary
documentation, demo files, and setup scripts for easy deployment.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "ai-workflow": "echo '🤖 See AI-WORKFLOW.md for AI processing details'",
     "process-chart": "echo '📊 See PROCESS-CHART.md for complete flowchart'",
     "quick-start": "echo '⚡ See QUICK-START.md for 5-minute setup'",
+    "framework": "concurrently \"npm run ai-server\" \"npm run dev\"",
+    "integration": "powershell -ExecutionPolicy Bypass -File start-integration.ps1",
     "lint": "eslint library/**/*.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
