feat: Add multi-machine configuration system
- Add comprehensive path configuration system (config/paths.config.js)
- Add environment-specific configuration (config/environment.config.js)
- Add interactive setup script (scripts/setup-multi-machine.js)
- Add detailed multi-machine setup documentation (docs/MULTI-MACHINE-SETUP.md)
- Update .env.example with comprehensive configuration options

Features:
- Auto-detect machine type and project paths
- Environment-specific configurations (dev/prod/test)
- Platform-specific path handling (Windows/macOS/Linux)
- Interactive setup wizard with validation
- Automatic startup script generation
- Comprehensive environment variable support
- Machine-specific configuration overrides

This enables easy deployment across different machines and environments
with minimal manual configuration required.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
-# AI Provider Configuration
+# Web3D Framework Environment Configuration
+# Copy this file to .env and customize for your setup
+
+# ===========================================
+# AI PROVIDER CONFIGURATION
+# ===========================================
 # Choose: gemini or openai
 AI_PROVIDER=gemini
 
@@ -14,8 +19,203 @@ OPENAI_API_KEY=your_openai_api_key_here
 # Get from: https://console.cloud.google.com/
 TTS_API_KEY=your_tts_api_key_here
 
-# Server Configuration
-PORT=3001
-
-# Development
+# ===========================================
+# ENVIRONMENT SETTINGS
+# ===========================================
 NODE_ENV=development
+
+# ===========================================
+# PATH CONFIGURATION
+# ===========================================
+# Project root (leave empty for auto-detection)
+PROJECT_ROOT=
+
+# Library assets path (leave empty for default)
+LIBRARY_ROOT=
+
+# ===========================================
+# AI SERVICE CONFIGURATION
+# ===========================================
+# AI service endpoint
+AI_ENDPOINT=http://localhost:8080/api/ai
+
+# AI batch processing settings
+AI_BATCH_SIZE=5
+AI_TIMEOUT=30000
+AI_MAX_RETRIES=3
+
+# ===========================================
+# SERVER CONFIGURATION
+# ===========================================
+# Server port
+PORT=3001
+SERVER_PORT=3001
+
+# Server host (use 0.0.0.0 for production)
+SERVER_HOST=localhost
+
+# Enable HTTPS (production only)
+HTTPS=false
+
+# ===========================================
+# DATABASE CONFIGURATION
+# ===========================================
+# Database type (sqlite/postgresql/mysql)
+DB_TYPE=sqlite
+
+# Database connection (for non-sqlite)
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=web3d_framework
+DB_USER=
+DB_PASSWORD=
+
+# Database SSL (production)
+DB_SSL=false
+
+# ===========================================
+# LIBRARY CONFIGURATION
+# ===========================================
+# Library cache size
+LIBRARY_CACHE_SIZE=1GB
+
+# Enable library compression
+LIBRARY_COMPRESSION=true
+
+# Library CDN URL (production)
+CDN_URL=
+
+# ===========================================
+# PERFORMANCE CONFIGURATION
+# ===========================================
+# Target FPS
+TARGET_FPS=60
+
+# Minimum FPS
+MIN_FPS=30
+
+# Maximum draw calls
+MAX_DRAW_CALLS=1000
+
+# Maximum memory usage
+MAX_MEMORY_USAGE=512MB
+
+# Enable AI optimization
+ENABLE_AI_OPTIMIZATION=true
+
+# ===========================================
+# WEBXR CONFIGURATION
+# ===========================================
+# Enable VR
+ENABLE_VR=true
+
+# Enable AR
+ENABLE_AR=true
+
+# Enable gesture recognition
+ENABLE_GESTURE_RECOGNITION=true
+
+# Enable voice commands
+ENABLE_VOICE_COMMANDS=true
+
+# ===========================================
+# SECURITY CONFIGURATION
+# ===========================================
+# Allowed origins (comma-separated)
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
+
+# Enable rate limiting
+ENABLE_RATE_LIMITING=true
+
+# Rate limit window (ms)
+RATE_LIMIT_WINDOW=900000
+
+# Rate limit max requests
+RATE_LIMIT_MAX=100
+
+# ===========================================
+# LOGGING CONFIGURATION
+# ===========================================
+# Log level (debug/info/warn/error)
+LOG_LEVEL=info
+
+# Enable file logging
+ENABLE_FILE_LOGGING=true
+
+# Log endpoint (production)
+LOG_ENDPOINT=
+
+# ===========================================
+# PRODUCTION SETTINGS
+# ===========================================
+# Production API endpoint
+PROD_AI_ENDPOINT=https://api.example.com/ai
+
+# Production server port
+PROD_PORT=8080
+
+# Production server host
+PROD_HOST=0.0.0.0
+
+# Production database
+PROD_DB_TYPE=postgresql
+PROD_DB_HOST=your-db-host.com
+PROD_DB_PORT=5432
+PROD_DB_NAME=web3d_prod
+PROD_DB_USER=your_username
+PROD_DB_PASSWORD=your_password
+
+# ===========================================
+# DEVELOPMENT SETTINGS
+# ===========================================
+# Development API endpoint
+DEV_AI_ENDPOINT=http://localhost:8080/api/ai
+
+# Development server port
+DEV_PORT=3000
+
+# Development server host
+DEV_HOST=localhost
+
+# Development database
+DEV_DB_TYPE=sqlite
+DEV_DB_PATH=./cache/dev_database.db
+
+# ===========================================
+# TESTING SETTINGS
+# ===========================================
+# Test server port
+TEST_PORT=3001
+
+# Test database
+TEST_DB_TYPE=sqlite
+TEST_DB_PATH=./cache/test_database.db
+
+# ===========================================
+# MACHINE-SPECIFIC SETTINGS
+# ===========================================
+# Windows paths
+TEMP=
+USERPROFILE=
+APPDATA=
+
+# Unix paths
+TMPDIR=
+HOME=
+
+# ===========================================
+# ADVANCED SETTINGS
+# ===========================================
+# Enable debug mode
+DEBUG=false
+
+# Enable verbose logging
+VERBOSE=false
+
+# Custom configuration file
+CUSTOM_CONFIG=
+
+# Feature flags
+ENABLE_EXPERIMENTAL_FEATURES=false
+ENABLE_BETA_FEATURES=false
+ENABLE_DEBUG_TOOLS=false
