Fix file structure and add Three.js dependencies
- Convert 01_threejs_basics.py to proper JavaScript file
- Remove invalid Python file with JavaScript content
- Add missing dependencies: cannon-es, dat.gui, @tensorflow-models/posenet, @tensorflow/tfjs
- Update package.json with complete Three.js ecosystem libraries
- All dependencies installed successfully

--- a/package.json
+++ b/package.json
@@ -49,12 +49,16 @@
   "homepage": "https://github.com/Nhatlinh9898/automatic-succotash#readme",
   "dependencies": {
     "concurrently": "^9.2.1",
+    "cannon-es": "^0.20.0",
+    "dat.gui": "^0.7.9",
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
-    "three": "^0.158.0"
+    "three": "^0.158.0",
+    "@tensorflow-models/posenet": "^2.2.2",
+    "@tensorflow/tfjs": "^4.10.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
