feat: implement full React Router integration and unified server connections
- Add React Router to main App.jsx with proper URL routing
- Update Header.jsx to use Link components for navigation
- Configure AI service with relative URLs and multiple endpoints
- Set up Vite proxy for consistent API routing to port 8080
- Create unified startup script (start-unified.js) for automated server management
- Add connection testing script (test-connections.js)
- Update package.json with new npm scripts
- Standardize all configurations to use ai-server on port 8080
- Enable URL-based navigation for all components (home, agents, webxr, etc.)
- Fix server endpoint conflicts between ai-server and main server

All components now properly connected with full routing and server integration.

--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "build": "vite build",
     "preview": "vite preview",
     "serve": "python -m http.server 8080",
-    "ai-server": "node server.js",
+    "ai-server": "node src/server/ai-server.js",
     "mc-presenter": "concurrently \"npm run ai-server\" \"python -m http.server 8080\"",
     "dev:full": "concurrently \"npm run dev\" \"npm run ai-server\"",
     "dev:mc3d": "vite --config vite.mc3d.config.js",
+    "start": "node start-unified.js",
+    "start:unified": "node start-unified.js",
+    "test:connections": "node test-connections.js",
     "setup-env": "node setup-env.js",
     "copy-env": "cp .env.setup .env",
     "process-guide": "echo '📋 See SETUP-GUIDE.md for complete setup process'",
