--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview",
     "serve": "python -m http.server 8080",
     "ai-server": "node src/server/ai-server.js",
+    "voice-server": "node start-voice-server.js",
     "mc-presenter": "concurrently \"npm run ai-server\" \"python -m http.server 8080\"",
     "dev:full": "concurrently \"npm run dev\" \"npm run ai-server\"",
+    "dev:voice": "concurrently \"npm run dev\" \"npm run voice-server\"",
     "dev:mc3d": "vite --config vite.mc3d.config.js",
     "start": "node start-unified.js",
     "start:unified": "node start-unified.js",
@@ -63,7 +65,6 @@
     "dat.gui": "^0.7.9",
     "draco3dgltf": "^1.5.6",
     "elevenlabs-api": "^1.0.0",
-    "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "file-saver": "^2.0.5",
     "gltf-pipeline": "^4.0.0",
@@ -97,7 +98,7 @@
     "concurrently": "^8.2.2",
     "cors": "^2.8.6",
     "eslint": "^4.1.1",
-    "express": "^4.18.2",
+    "express": "^4.22.1",
     "jest": "^25.0.0",
     "nodemon": "^1.0.2",
     "postcss": "^8.5.6",
